# parrot-safety-center

./: .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  parrot_safety_center.py  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-check.yml
docs/: architecture.md  release-checklist.md  safety-model.md
scripts/: run.sh
src/parrot_safety_center/: __init__.py  app.py  checks.py  common.py  guides.py  main_window.py  models.py  pages.py  redaction.py  runner.py  widgets.py  workers.py
tests/: test_gui_refresh_cleanup.py  test_runtime_wiring.py  test_static_safety.py
