[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parrot-safety-center"
version = "1.0.0"
description = "Unofficial read-only local safety dashboard for Parrot OS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "CodeWithAmeer"}]
keywords = ["parrot-os", "linux", "security", "desktop", "pyside6", "read-only"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = ["PySide6>=6.5"]

[project.urls]
Homepage = "https://github.com/CodeWithAmeer/parrot-safety-center"
Source = "https://github.com/CodeWithAmeer/parrot-safety-center"

[project.scripts]
parrot-safety-center = "parrot_safety_center.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
